--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,138 @@
 /* Universal */
+
+body {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 100svh;
+    background-color: rgb(22, 22, 22);
+    background-image: url("../images/background-image-fa.jpg");
+    background-blend-mode: multiply;
+    background-position:center;
+    background-size:cover;
+    background-attachment: fixed;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.card {
+    display: flex;
+    max-width: 40rem;
+    min-width: 20rem;
+    margin: 2rem 0;
+    border-radius: 0.45rem;
+}
+
+.gallery-card,
+.details-card {
+    background-color: slategray;
+    min-height: 18rem;
+}
+
 /* Header */
+
+.header-nav {
+    width: 100%;
+    height: 3rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(22, 22, 22);
+}
+
+.nav-link {
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin: 3em;
+    font-weight: 700;
+}
+
+
 /* Hero Card */
+
+.hero-card {
+    background-color: darkslategray;
+}
+
+.hero-frame {
+    width: 50%;
+}
+
+.hero-text {
+    padding: 1rem;
+    color: white;
+}
+
+.hero-text h1 {
+    font-size: 2rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.hero-image {
+    width: 100%;
+    border-radius: 0 0.45rem 0.45rem 0;
+}
+
 /* Gallery */
+
+.gallery-card {
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 1rem;
+}
+
+.img-frame {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem;
+    text-align: center;
+    min-width: 6rem;
+    min-height: 6rem;
+    background-color: rgb(28, 49, 49);
+    color: white;
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    font-weight: bolder;
+    border-radius: 0.64rem;
+    margin: 2rem;
+}
+
+/* Another Card */
+
+.details-card {
+    padding: 0 2rem 0 2rem;
+}
+
+.details-text {
+    color: rgb(22, 22, 22);
+    font-size: 2rem;
+    font-style: italic;
+    line-height: 2rem;
+}
+
 /* Footer */
+
+footer {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    color: azure;
+    background-color: rgb(22, 22, 22);
+}
+
+.footer-cr {
+    margin: 0 12rem;
+}
+
+.footer-email {
+    margin: 0 12rem;
+}
