--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,44 +1,28 @@
 /* Universal */
 
 body {
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    min-width: 100svh;
-    background-color: rgb(22, 22, 22);
-    background-image: url("../images/background-image-fa.jpg");
-    background-blend-mode: multiply;
-    background-position:center;
-    background-size:cover;
-    background-attachment: fixed;
+    flex-shrink: 1;
+    background-color: whitesmoke;
+    color: rgb(22, 22, 22);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.card {
+.section {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     display: flex;
-    max-width: 40rem;
-    min-width: 20rem;
-    margin: 2rem 0;
-    border-radius: 0.45rem;
-}
-
-.gallery-card,
-.details-card {
-    background-color: slategray;
-    min-height: 18rem;
 }
 
 /* Header */
 
 .header-nav {
     width: 100%;
-    height: 3rem;
-    position: fixed;
-    top: 0;
-    right: 0;
+    height: 2rem;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     background-color: rgb(22, 22, 22);
 }
@@ -47,92 +31,67 @@ body {
     color: white;
     text-transform: uppercase;
     text-decoration: none;
-    margin: 3em;
+    margin: 2em;
     font-weight: 700;
 }
 
+/* Intro Section */
 
-/* Hero Card */
-
-.hero-card {
-    background-color: darkslategray;
+.intro-section {
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 16rem;
 }
 
-.hero-frame {
-    width: 50%;
+.intro-section h1 {
+    color:darkmagenta;
+    font-size: 6rem;
 }
 
-.hero-text {
-    padding: 1rem;
-    color: white;
-}
-
-.hero-text h1 {
+.intro-section h2 {
     font-size: 2rem;
-    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.hero-image {
-    width: 100%;
-    border-radius: 0 0.45rem 0.45rem 0;
+.intro-section h3 {
+    font-size: 1.75rem;
+}
+    
+.intro-content {
+    max-width: 60rem;
 }
 
-/* Gallery */
+/* Featured Projects*/
 
-.gallery-card {
-    justify-content: space-around;
+.featured-projects {
     align-items: center;
     flex-wrap: wrap;
-    padding: 1rem;
 }
 
-.img-frame {
+.project-frame {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5rem;
-    text-align: center;
-    min-width: 6rem;
-    min-height: 6rem;
-    background-color: rgb(28, 49, 49);
-    color: white;
+    flex-direction: column;
+    margin-right: 3rem;
+}
+
+.project-name {
     text-transform: uppercase;
-    font-size: 0.75rem;
     font-weight: bolder;
-    border-radius: 0.64rem;
-    margin: 2rem;
 }
 
-/* Another Card */
+/* Contact Section */
 
-.details-card {
-    padding: 0 2rem 0 2rem;
+.contact-details {
+    flex-direction: column;
 }
 
-.details-text {
-    color: rgb(22, 22, 22);
-    font-size: 2rem;
-    font-style: italic;
-    line-height: 2rem;
+.contact-link {
+    color: darkmagenta;
+    text-decoration-line: underline;
+    text-decoration: wavy;
+}
+
+.contact-text {
+    max-width: 60rem;
 }
 
 /* Footer */
-
-footer {
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    color: azure;
-    background-color: rgb(22, 22, 22);
-}
-
-.footer-cr {
-    margin: 0 12rem;
-}
-
-.footer-email {
-    margin: 0 12rem;
-}
