--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,61 +1,51 @@
 /* Universal */
 
+html, body {
+    height: 100%;
+}
+
 body {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    flex-shrink: 1;
-    background-color: whitesmoke;
+    background-color: rgb(228, 228, 228);
     color: rgb(22, 22, 22);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: auto;
+    min-height: 100%;
+    max-width: 65%;
+    min-width: 16rem;
+    padding: 0 1rem 0 1rem;
+    margin: 0 auto;
+}
+
 .section {
     margin-top: 1rem;
-    margin-bottom: 1rem;
+    min-height: fit-content;
     display: flex;
 }
 
-/* Header */
-
-.header-nav {
-    width: 100%;
-    height: 2rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: rgb(22, 22, 22);
-}
-
-.nav-link {
-    color: white;
-    text-transform: uppercase;
-    text-decoration: none;
-    margin: 2em;
-    font-weight: 700;
-}
-
-/* Intro Section */
+/* Intro Section (Header) */
 
 .intro-section {
+    margin-top: 2rem;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 16rem;
 }
 
 .intro-section h1 {
     color:darkmagenta;
-    font-size: 6rem;
+    font-size: 5rem;
 }
 
 .intro-section h2 {
     font-size: 2rem;
+    margin: 0.25rem 0 0.55rem 0;
 }
-
-.intro-section h3 {
-    font-size: 1.75rem;
-}
-    
+  
 .intro-content {
     max-width: 60rem;
 }
@@ -63,6 +53,11 @@ body {
 /* Featured Projects*/
 
 .featured-projects {
+    flex-direction: column;
+}
+
+.project-gallery {
+    display: flex;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -70,12 +65,13 @@ body {
 .project-frame {
     display: flex;
     flex-direction: column;
-    margin-right: 3rem;
+    margin: 1rem 3rem 0 0;
 }
 
 .project-name {
     text-transform: uppercase;
     font-weight: bolder;
+    color:darkmagenta;
 }
 
 /* Contact Section */
@@ -84,13 +80,19 @@ body {
     flex-direction: column;
 }
 
+.contact-type,
+.contact-link {
+    font-size: 1.25rem;
+}
+
 .contact-link {
     color: darkmagenta;
-    text-decoration-line: underline;
-    text-decoration: wavy;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .contact-text {
+    margin-top: 0.25rem;
     max-width: 60rem;
 }
 
