--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,22 +16,28 @@ body {
     flex-wrap: nowrap;
     height: auto;
     min-height: 100%;
-    max-width: 65%;
+    max-width: 60rem;
     min-width: 16rem;
-    padding: 0 1rem 0 1rem;
+    padding: 0 1rem;
     margin: 0 auto;
 }
 
 .section {
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     min-height: fit-content;
     display: flex;
+}
+
+.intro-section,
+.featured-projects {
+    padding-bottom: 1.5rem;
+    border-bottom: solid 1px black;
 }
 
 /* Intro Section (Header) */
 
 .intro-section {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -43,7 +49,7 @@ body {
 
 .intro-section h2 {
     font-size: 2rem;
-    margin: 0.25rem 0 0.55rem 0;
+    margin: 0.65rem 0 1rem 0;
 }
   
 .intro-content {
@@ -56,6 +62,10 @@ body {
     flex-direction: column;
 }
 
+.project-heading {
+    margin-bottom: 0.65rem;
+}
+
 .project-gallery {
     display: flex;
     align-items: center;
@@ -65,7 +75,7 @@ body {
 .project-frame {
     display: flex;
     flex-direction: column;
-    margin: 1rem 3rem 0 0;
+    margin: 1rem 2rem 0.5rem 0;
 }
 
 .project-name {
@@ -97,3 +107,7 @@ body {
 }
 
 /* Footer */
+
+.footer {
+    justify-content: flex-end;
+}
