--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,9 +79,15 @@ body {
 }
 
 .project-name {
+    margin: 0;
     text-transform: uppercase;
+    text-decoration: none;
     font-weight: bolder;
     color:darkmagenta;
+}
+
+.project-image {
+    max-width: fit-content;
 }
 
 /* Contact Section */
@@ -110,4 +116,17 @@ body {
 
 .footer {
     justify-content: flex-end;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 480px) {
+    .intro-section h1 {
+        color:darkmagenta;
+        font-size: 3.5rem;
+    }
+
+    .intro-section h2 {
+        font-size: 1.5rem;
+        margin: 0.25rem 0 1rem 0;
 }
