--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,11 @@ body {
     border-bottom: solid 1px black;
 }
 
+.project-name:hover,
+.contact-link:hover {
+    color:seagreen;
+}
+
 /* Intro Section (Header) */
 
 .intro-section {
@@ -90,6 +95,10 @@ body {
     max-width: fit-content;
 }
 
+.project-image:hover {
+    opacity: 0.5;
+}
+
 /* Contact Section */
 
 .contact-details {
@@ -129,4 +138,5 @@ body {
     .intro-section h2 {
         font-size: 1.5rem;
         margin: 0.25rem 0 1rem 0;
+    }
 }
