--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,19 @@
 /* Universal */
 
+@font-face {
+    font-family: 'LiberationSans';
+    src: url('../fonts/LiberationSans-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'LiberationSans';
+    src: url('../fonts/LiberationSans-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html, body {
     height: 100%;
 }
@@ -7,7 +21,7 @@ html, body {
 body {
     background-color: rgb(228, 228, 228);
     color: rgb(22, 22, 22);
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'LiberationSans', Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .content-wrapper {
