--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,8 +19,8 @@ html, body {
 }
 
 body {
-    background-color: rgb(237, 237, 237);
-    color: rgb(22, 22, 22);
+    background-color: var(--neutral-color);
+    color: var(--black-ish);
     font-family: 'LiberationSans', Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -45,12 +45,24 @@ body {
 .intro-section,
 .featured-projects {
     padding-bottom: 1.5rem;
-    border-bottom: solid 1px black;
+    border-bottom: solid 1px var(--black-ish);
 }
 
-.project-name:hover,
-.contact-link:hover {
-    color:seagreen;
+a:hover {
+    color:var(--accent-color);
+}
+
+h1, a {
+    color:var(--primary-color);
+}
+
+/* Colors */
+
+:root {
+    --primary-color: tomato;
+    --accent-color: seagreen;
+    --black-ish: rgb(20, 20, 20);
+    --neutral-color: rgb(237, 237, 237);
 }
 
 /* Intro Section (Header) */
@@ -62,7 +74,6 @@ body {
 }
 
 .intro-section h1 {
-    color:darkmagenta;
     font-size: 5rem;
 }
 
@@ -94,7 +105,7 @@ body {
 .project-frame {
     display: flex;
     flex-direction: column;
-    margin: 1rem 2rem 0.5rem 0;
+    margin: 1rem 1rem 0.5rem 0;
 }
 
 .project-name {
@@ -102,11 +113,10 @@ body {
     text-transform: uppercase;
     text-decoration: none;
     font-weight: bolder;
-    color:darkmagenta;
 }
 
 .project-image {
-    max-width: fit-content;
+    width: 100%;
 }
 
 .project-image:hover {
@@ -125,7 +135,6 @@ body {
 }
 
 .contact-link {
-    color: darkmagenta;
     font-weight: bold;
     text-decoration: none;
 }
@@ -145,7 +154,6 @@ body {
 
 @media screen and (max-width: 480px) {
     .intro-section h1 {
-        color:darkmagenta;
         font-size: 3.5rem;
     }
 
